samples/_failures_safe/1761315411_8fdab4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1d3cd800.c:188:1: error: expected identifier or ‘(’ at end of input
  188 | void
      | ^~~~
